fixing some of the main page styling and alignment

--- a/main.css
+++ b/main.css
@@ -5,6 +5,8 @@ body{
 }
 a{
     color: #ccc;
+    width: 600px;
+    height: 400px;    
 }
 
 div.gallery {
@@ -17,7 +19,7 @@ div.gallery:hover {
 
 div.gallery img {
     width: 100%;
-    height: auto;
+    height: inherit;
 }
 
 div.desc {
@@ -35,14 +37,14 @@ div.desc {
     width: 24.99999%;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 1200px) {
     .responsive {
         width: 49.99999%;
         margin: 6px 0;
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 800px) {
     .responsive {
         width: 100%;
     }
@@ -52,6 +54,7 @@ div.desc {
     content: "";
     display: table;
     clear: both;
+    padding-top: 13px;
 }
 .centerText{
   text-align: center;
